tests/expectations/compiler/array/array_with_units_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372056]: Unit expressions can only be used in return statements.
    --> compiler-test:5:29
     |
   5 |         let bar: [(); 2] = [(), ()];
     |                             ^^
Error [ETYC0372056]: Unit expressions can only be used in return statements.
    --> compiler-test:5:33
     |
   5 |         let bar: [(); 2] = [(), ()];
     |                                 ^^
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:4:5
     |
   4 |     transition foo() -> bool {
   5 |         let bar: [(); 2] = [(), ()];
   6 |     }
     |     ^
"""]
